[gd_scene load_steps=6 format=3 uid="uid://d8c1ngy3yrs1"]

[ext_resource type="Script" uid="uid://dlijqfhj3ffpy" path="res://end_screen.gd" id="1_abjgy"]
[ext_resource type="Texture2D" uid="uid://76kl4gky1e1y" path="res://atlas/title_screen.png" id="1_my301"]

[sub_resource type="LabelSettings" id="LabelSettings_3iaq5"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_my301"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_abjgy"]
font_size = 64

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abjgy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("1_my301")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -492.0
offset_top = 45.0
offset_right = 492.0
offset_bottom = 141.0
grow_horizontal = 2
text = "The Mastermind Escaped"
label_settings = SubResource("LabelSettings_3iaq5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -24.0
offset_right = 162.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Eggs Collected: "
label_settings = SubResource("LabelSettings_my301")

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Eggs Collected: "
label_settings = SubResource("LabelSettings_my301")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Time Spent: "
label_settings = SubResource("LabelSettings_abjgy")

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Time Spent: "
label_settings = SubResource("LabelSettings_abjgy")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40.78)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "Retry"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 64
text = "Exit"
